apps/nas/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.nas.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: internal-gw
    namespace: infrastructure
  hostnames:
  - "transmission.${domain_absolutist_it:=absolutist.it}"
  - "transmission.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: transmission
      port: 9091
